2008-01-11  Michael Smith <msmith@fluendo.com>

	* ext/theora/theoradec.c: (gst_theora_dec_class_init),
	(_theora_granule_frame), (_theora_granule_start_time),
	(theora_dec_sink_convert), (theora_dec_decode_buffer):
	  Adapt for post-alpha meaning of granulepos, when we
	  have a newer version of libtheora.
	* ext/theora/theoraenc.c: (gst_theora_enc_class_init),
	(theora_enc_get_ogg_packet_end_time), (theora_enc_sink_event),
	(theora_enc_is_discontinuous), (theora_enc_chain):
	  Likewise.
	* tests/check/Makefile.am:
	  Link libtheora into theoraenc test so we can check which version of
	  libtheora we're testing against.
	* tests/check/pipelines/theoraenc.c: (check_libtheora),
	(check_buffer_granulepos),
	(check_buffer_granulepos_from_starttime), (GST_START_TEST),
	(theoraenc_suite):
	  Adapt tests to check the values that are now defined for theora; make
	  the tests backwards-adapt the passed values if we're running against an
	  old libtheora.
	  Fixes #497964

2008-01-10  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	  (gst_base_audio_sink_class_init):
	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	  (gst_base_audio_src_class_init):
	  Ref audio clock class from a thread-safe context to make sure
	  we're not bit by GObjects lack of thread-safety here (#349410),
	   however unlikely that may be in practice.

2008-01-10  Sebastian Dröge  <slomo@circular-chaos.org>

	* autogen.sh:
	  Add -Wno-portability to the automake parameters to stop warnings
	  about GNU make extensions being used. We require GNU make in almost
	  every Makefile anyway.
	  
	* configure.ac:
	  Use AM_PROG_CC_C_O as a compiler that accepts both -c and -o
	  at the same time is required for per target flags.

2008-01-08  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/tag/gsttagdemux.c: (gst_tag_demux_pull_start_tag):
	  Post an error message if we can't pull as many bytes as we need